...
                    .disableAutocorrection(true)
                    .textFieldStyle(SearchFieldStyle())
                    .submitLabel(.search)
                    .onSubmit {
                        onSearchButtonTapped()
                    }
                    .accessibilityIdentifier("searchField")
                    .focused($focused)
                    .overlay {
                        HStack {
                            Button(
                                action: {
                                    query = ""
...
